Commit - Beginning index.html code

--- a/web_app_dashboard_v3.2/index.html
+++ b/web_app_dashboard_v3.2/index.html
@@ -4,9 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Web Metrics</title>
 </head>
-<body>
+<body class="grid">
+        <h1>MW-Metrics&trade;</h1>
+        <div>
+            <svg xmlns="http://www.w3.org/2000/svg" height="30" width="28">
+                <path fill="#indigo" d="M24 18v-8c0-5.5-4.5-10-10-10S4 4.5 4 10v8l-4 8h9.1c.5 2.3 2.5 4 4.9 4 2.4 0 4.4-1.7 4.9-4H28zM14 28c-1.3 0-2.4-.8-2.8-2h5.6c-.4 1.2-1.5 2-2.8 2zM3 24l3-6v-8c0-4.4 3.6-8 8-8s8 3.6 8 8v8l3 6z"/>
+            </svg>
+            <div id="notifications"></div>
+        </div>             
+        <img src="images/member-2.jpg" alt="profile-pic">
+        <h3>Justin Case</h3>
+
+    <nav>
+        <a href="#">
+            <img src="svgs/icons/icon-dashboard.svg" alt="dashboard">
+        </a>
+        <a href="#">
+            <img src="svgs/icons/icon-members.svg" alt="members">
+        </a>
+        <a href="#">
+            <img src="svgs/icons/icon-visits.svg" alt="visitors">
+        </a>
+        <a href="#">
+            <img src="svgs/icons/icon-settings.svg" alt="settings">
+        </a>
+    </nav>
+    
+    -- main 
+        -- row 
+            -- col 1 
+        -- row 
+            -- col 1 
+            -- col 2 
+
     
 </body>
 </html>
