--- a/web_app_dashboard_v3.2/index.html
+++ b/web_app_dashboard_v3.2/index.html
@@ -19,16 +19,16 @@
 
     <nav>
         <a href="#">
-            <img src="svgs/icons/icon-dashboard.svg" alt="dashboard">
+            <img src="icons/icon-dashboard.svg" alt="dashboard">
         </a>
         <a href="#">
-            <img src="svgs/icons/icon-members.svg" alt="members">
+            <img src="icons/icon-members.svg" alt="members">
         </a>
         <a href="#">
-            <img src="svgs/icons/icon-visits.svg" alt="visitors">
+            <img src="icons/icon-visits.svg" alt="visitors">
         </a>
         <a href="#">
-            <img src="svgs/icons/icon-settings.svg" alt="settings">
+            <img src="icons/icon-settings.svg" alt="settings">
         </a>
     </nav>
     
