Dashboard Section Link Functionality Added

--- a/webApp/index.html
+++ b/webApp/index.html
@@ -34,16 +34,16 @@
 <!-- #region NAVIGATION -->
     <nav>
         <div class="sidebar-nav">
-            <a href="#">
+            <a href="#top">
                 <img src="svgs/home.svg" alt="dashboard">
             </a>
-            <a href="#">
-                <img src="svgs/bar-chart.svg" alt="visitors">
+            <a href="#socialNav">
+                <img src="svgs/bar-chart.svg" alt="social statistics">
             </a>
-            <a href="#">
+            <a href="#membersNav">
                 <img src="svgs/members.svg" alt="members">
             </a>
-            <a href="#">
+            <a href="#settingsNav">
                 <img src="svgs/settings.svg" alt="settings">
             </a>
         </div>
@@ -102,7 +102,7 @@
 <!-- #endregion -->
 
 <!-- #region SOCIAL MEDIA STATISTICS -->
-        <section class="social-statistics">
+        <section id="socialNav" class="social-statistics">
             <h3 class="section-title">Social Stats</h3>
             <div class="social-container">
                   <div class="sub-section">
@@ -147,7 +147,7 @@
 <!-- #endregion -->
 
 <!-- #region MEMBERS SECTION -->
-        <section class="members">
+        <section id="membersNav" class="members">
           <h3 class="section-title">New Members</h3>
             <div class="members-container">                
                 <div class="member-section">
@@ -263,7 +263,7 @@
 <!-- #region SETTINGS SECTION -->
 
 <!-- TOGGLE SWITCHES -->
-        <section class="settings">
+        <section id="settingsNav" class="settings">
             <h3 class="section-title">Settings</h3>
             <div class="switches-container">
                 <div class="toggles switch1">
