--- a/webApp/index.html
+++ b/webApp/index.html
@@ -19,8 +19,8 @@
   <div class="grid-container">
     <header class="site-header">
         <h1><span class="bold-font">Web</span>App&trade;</h1>
-        <div class="bell-icon-container">
-             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -10 30 40" class="bell-icon">
+        <div class="bell-icon-container" id="bellAlert">
+             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -10 30 40" class="bell-icon" id="bellMessage">
                     <path fill="#fff" d="M24 18v-8c0-5.5-4.5-10-10-10S4 4.5 4 10v8l-4 8h9.1c.5 2.3 2.5 4 4.9 4 2.4 0 4.4-1.7 4.9-4H28zM14 28c-1.3 0-2.4-.8-2.8-2h5.6c-.4 1.2-1.5 2-2.8 2zM3 24l3-6v-8c0-4.4 3.6-8 8-8s8 3.6 8 8v8l3 6z"/>
             </svg>
             <div id="notifications-alert"></div>
@@ -251,7 +251,7 @@
 <!-- #region MESSAGE USERS SECTION -->
         <section class="message">           
             <h3 class="section-title">Message User</h3>            
-            <form class="widget-container">
+            <form class="widget-container" id="submissionRld">
                 <div class="autocomplete">
                     <input type="text" autocopmlete="off" placeholder="Search for user" class="form-field" id="userField">
                 </div>
