HTML & CSS Validator Errors
Fixed all errors showing up from HTML and CSS validation

--- a/webApp/index.html
+++ b/webApp/index.html
@@ -163,7 +163,7 @@
 
                 <div class="member-section">
                   <div class="member-info">
-                    <img class="member-Img" src="images/member-2.jpg" class="Photo of Dale">
+                    <img class="member-Img" src="images/member-2.jpg" alt="Photo of Dale">
                     <div class="members-text">
                         <p>Dale Byrd</p>
                         <a class="members-email" href="mailto:dale.byrd52@example.com">dale.byrd52@example.com</a>
@@ -174,7 +174,7 @@
 
                 <div class="member-section">
                   <div class="member-info">
-                    <img class="member-Img" src="images/member-3.jpg" class="Photo of Dawn">
+                    <img class="member-Img" src="images/member-3.jpg" alt="Photo of Dawn">
                     <div class="members-text">
                         <p>Dawn Wood</p>
                         <a class="members-email" href="mailto:dawn.wood16@example.com">dawn.wood16@example.com</a>
@@ -185,7 +185,7 @@
 
                 <div class="member-section last-member">
                   <div class="member-info">
-                    <img class="member-Img" src="images/member-4.jpg" class="Photo of Dan">
+                    <img class="member-Img" src="images/member-4.jpg" alt="Photo of Dan">
                     <div class="members-text">
                         <p>Dan Oliver</p>
                         <a class="members-email" href="mailto:dan.oliver82@example.com">dan.oliver82@example.com</a>
@@ -203,9 +203,9 @@
           <div class="members-container">
             <div class="member-section">
                 <div class="member-info">
-                    <img class="member-Img" src="images/member-1.jpg" class="profile-image">
+                    <img class="member-Img profile-image" src="images/member-1.jpg" alt="profile-image">
                     <div class="members-text">
-                        <p>Victoria Chambers commented on <span id="bold-font">WebApp's SEO Tips</span></p>
+                        <p>Victoria Chambers commented on <span>WebApp's SEO Tips</span></p>
                         <p class="activity-time">4 hours ago</p>
                     </div>
               </div>
@@ -214,10 +214,10 @@
 
             <div class="member-section">
               <div class="member-info">
-                    <img class="member-Img" src="images/member-2.jpg" class="profile-image">
+                    <img class="member-Img profile-image" src="images/member-2.jpg" alt="profile-image">
                     <div class="members-text">
-                        <p>Dale Byrd liked the post <span id="bold-font">Facebook's Changes for 2021</span></p>
-                        <p id="activity-time">5 hours ago</p>
+                        <p>Dale Byrd liked the post <span>Facebook's Changes for 2021</span></p>
+                        <p class="activity-time">5 hours ago</p>
                     </div>
               </div>
                 <p class="carrot">></p>
@@ -225,10 +225,10 @@
 
             <div class="member-section">
               <div class="member-info">
-                    <img class="member-Img" src="images/member-3.jpg" class="profile-image">
+                    <img class="member-Img profile-image" src="images/member-3.jpg" alt="profile-image">
                     <div class="members-text">
-                        <p>Dawn Wood commented on <span id="bold-font">Facebook's Changes for 2021</span></p>
-                        <p id="activity-time">5 hours ago</p>                    
+                        <p>Dawn Wood commented on <span>Facebook's Changes for 2021</span></p>
+                        <p class="activity-time">5 hours ago</p>                    
                     </div>
               </div>
                 <p class="carrot">></p>                
@@ -236,10 +236,10 @@
 
             <div class="member-section last-member">
               <div class="member-info">
-                    <img class="member-Img" src="images/member-4.jpg" class="profile-image">
+                    <img class="member-Img profile-image" src="images/member-4.jpg" alt="profile-image">
                     <div class="members-text">
-                        <p>Dan Oliver posted <span id="bold-font">WebApp's SEO Tips</span></p>
-                        <p id="activity-time">1 day ago</p>                    
+                        <p>Dan Oliver posted <span>WebApp's SEO Tips</span></p>
+                        <p class="activity-time">1 day ago</p>                    
                     </div>
               </div>
                 <p class="carrot">></p>
@@ -253,7 +253,7 @@
             <h3 class="section-title">Message User</h3>            
             <form class="widget-container" id="submissionRld">
                 <div class="autocomplete">
-                    <input type="text" autocopmlete="off" placeholder="Search for user" class="form-field" id="userField">
+                    <input type="text" placeholder="Search for user" class="form-field" id="userField">
                 </div>
                 <textarea placeholder="Message for user" class="form-area" id="messageField"></textarea>
                 <button class="button-primary" id="send">Send</button>
@@ -269,13 +269,13 @@
             <h3 class="section-title">Settings</h3>
             <div class="switches-container">
                 <div class="toggles switch1">
-                    <p id="settings-text">
+                    <p>
                         Send Email Notifications
                     </p>
                     <label class="switch-light switch-ios switch-a" onclick="">
-                    <input id="email-checkbox" store="checkbox1" type="checkbox">
+                    <input id="email-checkbox" class="checkbox1" type="checkbox">
                         <span>
-                            <span id="off">Off</span>
+                            <span>Off</span>
                             <span id="on">On</span>
                             <a></a>
                         </span>
@@ -283,14 +283,14 @@
                 </div>
 
                 <div class="toggles switch2">
-                    <p id="settings-text">
+                    <p>
                         Set Profile to Public
                     </p>
                     <label class="switch-light switch-ios switch-b" onclick="">
-                    <input id="public-checkbox" store="checkbox2" type="checkbox">
+                    <input id="public-checkbox" class="checkbox2" type="checkbox">
                         <span>
-                            <span id="off">Off</span>
-                            <span id="on">On</span>
+                            <span>Off</span>
+                            <span id="on2">On</span>
                             <a></a>
                         </span>
                     </label>
